--- a/views/categories/edit.ejs
+++ b/views/categories/edit.ejs
@@ -2,5 +2,8 @@
     <label for="name">Name</label>
     <input type="text" name="name" value="<%= category.name %>">
 
+    <label for="songs">Songs</label>
+
+
     <input type="submit">
 </form>
