--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -2,6 +2,31 @@
 
 <h3>Welcome to your PROFILE</h3>
 
-<p>Id: <%= id %></p>
-<p>Name: <%= name %></p>
-<p>Email: <%= email %></p>
+<p>Id: <%= id %>
+</p>
+<p>Name: <%= name %>
+</p>
+<p>Email: <%= email %>
+</p>
+
+<h3>YOUR CATEGORIES</h3>
+
+<% for( let i in categories ) { %>
+    <% let category=categories[i]; %>
+        <% category=category.toJSON(); %>
+            <h4>
+                <%= category.name %>
+            </h4>
+            <table>
+                <tr>
+                    <th>Song</th>
+                    <th>Artist</th>
+                    <th>Media Player</th>
+                </tr>
+                <tr>
+                    <td>
+                        <%= %>
+                    </td>
+                </tr>
+            </table>
+            <% } %>
