--- a/views/schools/show.ejs
+++ b/views/schools/show.ejs
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css-1/style.css">
     <title></title>
 </head>
 
@@ -18,6 +19,9 @@
                 <p>
                     <%= category.name %>
                 </p>
+                <form method="POST" action="/categories/<%= category.id %>/?_method=PUT">
+                    <input type="submit" value="Edit Category">
+                </form>
                 <form method="POST" action="/categories/<%= category.id %>/?_method=DELETE">
                     <input type="submit" value="Delete Category">
                 </form>
