--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,3 +1,14 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title></title>
+    <link rel="stylesheet" href="../css-1/category.css">
+</head>
+
 <form action="/auth/login" method="POST">
     <label for="auth-email">Email</label>
     <input id="auth-email" type="email" name="email" required>
@@ -7,4 +18,3 @@
 
     <input type="submit" value="Log In">
 </form>
-  
