--- a/views/categories/new.ejs
+++ b/views/categories/new.ejs
@@ -1,4 +1,15 @@
-<form method="POST" action="/categories">
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title></title>
+    <link rel="stylesheet" href="../css-1/category.css">
+</head>
+
+<form method="POST" action="/categories" autocomplete="off">
     <label for="name">Name</label>
     <input type="text" name="name">
 
